[tool.poetry]
name = "AsyncRx"
version = "1.6.1"
description = "Async Observables for F# and Fable"
authors = ["Dag Brattli <dag@brattli.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
fable-library = "^0.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
